# autonomous_navigation_with_obs_stop_and_ball_follow

./: README.md
src/diffbot_description/: AI_USAGE_TEMPLATE.md  CMakeLists.txt  README.md  SUMMARY_TEMPLATE.md  package.xml
src/diffbot_description/config/: ros_gz_bridge.yaml
src/diffbot_description/launch/: gazebo.launch.py  robot.launch.py  sim_launch.py
src/diffbot_description/meshes/visual/: bl_whl.STL  br_whl.STL  fl_whl.STL  fr_whl.STL
src/diffbot_description/urdf/: r1_eval (copy).sdf  r1_eval.sdf  r1_eval.urdf
src/diffbot_description/worlds/: empty.sdf  industrial-warehouse.sdf
src/diffbot_navigation/: package.xml  setup.cfg  setup.py
src/diffbot_navigation/config/: params.yaml
src/diffbot_navigation/diffbot_navigation/: ball_teleop.py  ball_tracker.py  obstacle_stop.py  path_follower.py  random_waypoints.py  square_waypoints.py
src/diffbot_navigation/launch/: ball_follow.launch.py  navigation.launch.py
